force-app/main/default/objects/OCX_Customer_Interaction__c/OCX_Customer_Interaction__c.object-meta.xml
<CustomObject>
    <description>Conversation metadata (email, meeting, chat, survey verbatim). Source: conv_corpus.</description>
    <label>Customer Interaction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>