force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Interactions</relationshipLabel>
    <relationshipName>OCX_Customer_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>