force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Brief__c.field-meta.xml
<CustomField>
    <fullName>OCX_Brief__c</fullName>
    <label>Call Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>