force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Driver__c.field-meta.xml
<CustomField>
    <fullName>OCX_Driver__c</fullName>
    <label>Driver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>