force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Interaction_ID__c</fullName>
    <description>conv_corpus.id.</description>
    <externalId>true</externalId>
    <label>OCX Interaction ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>