force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Key_Points__c.field-meta.xml
<CustomField>
    <fullName>OCX_Key_Points__c</fullName>
    <label>Key Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>