force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Occurred_At__c</fullName>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>