force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Stage__c.field-meta.xml
<CustomField>
    <fullName>OCX_Stage__c</fullName>
    <label>Journey Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>