force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Subject__c.field-meta.xml
<CustomField>
    <fullName>OCX_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>