force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Transcript__c.field-meta.xml
<CustomField>
    <fullName>OCX_Transcript__c</fullName>
    <description>Populated only when the export runs with --with-transcripts.</description>
    <label>Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>