force-app/main/default/objects/OCX_Customer_Interaction__c/fields/OCX_Type__c.field-meta.xml
<CustomField>
    <fullName>OCX_Type__c</fullName>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>